[tool.poetry]
name = "drones"
version = "0.1.0"
description = "A solution for the technical task of the recruitment process of Musala Soft."
authors = ["Leynier Gutiérrez González <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/drones"
repository = "https://github.com/leynier/drones"
documentation = "https://github.com/leynier/drones"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
sqlmodel = "^0.0.6"
alembic = "^1.7.7"
fastapi-restful = "^0.4.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^24.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-depends = "^1.0.1"
dirty-equals = "^0.4"
mimesis = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
